0 - Eliminados test por defecto y configuración de  karma.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,7 +19,7 @@
   },
   "editor.codeActionsOnSave": [
     "source.addMissingImports",
-    "source.organizeImports",
+    // "source.organizeImports",
     "source.fixAll",
     "source.fixAll.eslint"
   ],
