--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
     "ng": "ng",
     "start": "ng serve -o",
     "test": "ng test",
-    "lint": "ng lint"
+    "lint": "ng lint",
+    "e2e": "ng e2e",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run"
   },
   "private": true,
   "dependencies": {
@@ -25,6 +28,7 @@
     "@angular-devkit/build-angular": "~12.2.8",
     "@angular/cli": "~12.2.8",
     "@angular/compiler-cli": "~12.2.8",
+    "@cypress/schematic": "^2.4.0",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
@@ -40,6 +44,7 @@
     "karma-mocha-reporter": "^2.2.5",
     "prettier": "^2.4.1",
     "prettier-eslint": "^13.0.0",
-    "typescript": "~4.3.5"
+    "typescript": "~4.3.5",
+    "cypress": "latest"
   }
 }
